# ai-customer-service

./: .env.example  .gitignore  DOCUMENTATION_STRATEGY.md  LICENSE  README.md  main.py  pyproject.toml  test_llm_quick.py
config/: README.md  __init__.py  prompt_loader.py  prompts.yaml  settings.py
docs/: README.md  agents.md  configuration.md  llm.md  models.md
scripts/: validate_config.py  validate_models.py
src/agents/: README.md  __init__.py  base_agent.py
src/llm/: README.md  __init__.py  base.py  client.py
src/llm/providers/: __init__.py  claude.py  openai.py
src/models/: README.md  __init__.py  agent_state.py  base.py  customer.py  message.py  ticket.py
tests/: conftest.py
tests/unit/: test_base_agent.py  test_config.py  test_llm_client.py  test_models.py
